--- a/styles.css
+++ b/styles.css
@@ -29,17 +29,21 @@ section {
 .personal-info {
     display: flex;
     align-items: center;
+    flex-direction: column;
 }
 
 .profile-picture {
-    width: 50px;
-    height: 50px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
-    margin-right: 1rem;
+    margin-bottom: 1rem;
+    max-width: 100%;
+    object-fit: cover;
 }
 
 .personal-info div {
     flex: 1;
+    text-align: center;
 }
 
 h2 {
